# msLocalRAG

./: .env.sample  .gitignore  .gitmodules  README.md  docker-compose-chatgpt.yml  docker-compose-mcp.yml  docker-compose-ollama.yml  run.sh
chat/: package-lock.json  package.json
chat/src/: App.js  ChatApp.tsx
electron/: README.md  index.html  package-lock.json  package.json
electron/src/: view.js
indexer/: Dockerfile  app.py  async_loop.py  async_queue.py  indexer.py  requirements.txt  storage.py
linker/: app.py  requestor.py  requirements.txt
llm/: Dockerfile  app.py  async_answer_to_socket.py  async_question_to_answer.py  async_queue.py  async_socket_to_chat.py  llm_chain.py  minima_embed.py  requirements.txt
mcp-server/: README.md  pyproject.toml
mcp-server/src/mslocalrag/: __init__.py  requestor.py  server.py
